--- a/data-manager/molprops.yaml
+++ b/data-manager/molprops.yaml
@@ -183,7 +183,7 @@ jobs:
         - outputFile
         properties:
           outputFile:
-            title: Output file (.sdf)
+            title: Output file (.sdf or .smi)
             type: string
             default: cxn-molprops.sdf
             pattern: "^[A-Za-z0-9_/\\.\\-]+$"
@@ -360,7 +360,7 @@ jobs:
         - ph
         properties:
           outputFile:
-            title: Output file (.sdf)
+            title: Output file (.sdf or .smi)
             type: string
             default: cxn-logd.sdf
             pattern: "^[A-Za-z0-9_/\\.\\-]+$"
@@ -394,4 +394,124 @@ jobs:
           - name: foo/cxn-logd.sdf
             checks:
             - exists: true
+
+  chemaxon-molecular-props-pka:
+    name: ChemAxon pKa calculator
+    description: >-
+      Calculate most acidic and basic pKa values using ChemAxon tools.
+    version: '1.0.0'
+    category: molecular properties
+    keywords:
+    - chemaxon
+    - properties
+    - pka
+    image:
+      name: informaticsmatters/squonk2-chemaxon
+      tag: latest
+      project-directory: /data
+      working-directory: /data
+      fix-permissions: true
+      file:
+      - name: /usr/local/license.cxl
+        content-from:
+          account-server-asset:
+            name: chemaxon-license-file
+      environment:
+      - name: CHEMAXON_LICENSE_URL
+        value-from:
+          constant:
+            value: /usr/local/license.cxl
+    # The container has no entrypoint so this is the command that is executed.
+    # The CLASSPATH environment variable in the container is set.
+    command: >-
+      java squonk.jobs.chemaxon.PKaCalc
+      --input '{{ inputFile }}'
+      --output '{{ outputFile }}'
+      {% if header is defined %}--header {{ header }}{% endif %}
+      {% if acidic is defined %}--acidic{% endif %}
+      {% if basic is defined %}--basic{% endif %}
+    variables:
+      order:
+        options:
+        - outputFile
+        - header
+        - acidic
+        - basic
+      inputs:
+        type: object
+        required:
+        - inputFile
+        properties:
+          inputFile:
+            title: Input molecules
+            mime-types:
+            - chemical/x-mdl-sdfile
+            - squonk/x-smiles
+            - text/csv
+            type: file
+      outputs:
+        type: object
+        properties:
+          results:
+            title: Output file name
+            mime-types:
+            - chemical/x-mdl-sdfile
+            creates: '{{ outputFile }}'
+            type: file
+            annotation-properties:
+              fields-descriptor:
+                origin: squonk2-job
+                description: ChemAxon logD calculator
+                fields:
+                  CXN_aPka:
+                    type: number
+                    description: >-
+                      Most acidic pKa
+                    required: false
+                    active: true
+                  CXN_bPka:
+                    type: number
+                    description: >-
+                      Most basic pKa
+                    required: false
+                    active: true
+              service-execution:
+                service_ref: 'https://discourse.squonk.it/t/job-cdk-molecular-descriptors/126'
+              derived-from: inputFile
+      options:
+        type: object
+        required:
+        - outputFile
+        - ph
+        properties:
+          outputFile:
+            title: Output file (.sdf or .smi)
+            type: string
+            default: cxn-pka.sdf
+            pattern: "^[A-Za-z0-9_/\\.\\-]+$"
+          header:
+            title: Include header for .smi output
+            type: boolean
+            default: true
+          acidic:
+            title: Calculate acidic pKa
+            type: boolean
+            default: true
+          basic:
+            title: Calculate basic pKa
+            type: boolean
+            default: true
+    tests:
+      simple-execution:
+        inputs:
+          inputFile: data/dhfr_3d-10.sdf
+        options:
+          outputFile: foo/cxn-pka.sdf
+          acidic: true
+          basic: true
+        checks:
+          exitCode: 0
+          outputs:
+          - name: foo/cxn-pka.sdf
+            checks:
             - exists: true
