--- a/data-manager/molprops.yaml
+++ b/data-manager/molprops.yaml
@@ -26,7 +26,7 @@ jobs:
     - tpsa
     image:
       name: informaticsmatters/squonk2-chemaxon
-      tag: latest
+      tag: license
       project-directory: /data
       working-directory: /data
       fix-permissions: true
@@ -54,8 +54,10 @@ jobs:
       {% if bondCount is defined and bondCount %}--bondCount{% endif %}
       {% if logp is defined and logp %}--logp{% endif %}
       {% if logd is defined and logd %}--logd{% endif %}
-      {% if hba is defined and hba %}--hba{% endif %}
-      {% if hbd is defined and hbd %}--hbd{% endif %}
+      {% if hbaCount is defined and hbaCount %}--hba-count{% endif %}
+      {% if hbdCount is defined and hbdCount %}--hbd-count{% endif %}
+      {% if hbaSites is defined and hbaSites %}--hba-sites{% endif %}
+      {% if hbdSites is defined and hbdSites %}--hbd-sites{% endif %}
       {% if ringCount is defined and ringCount %}--ringCount{% endif %}
       {% if ringAtomCount is defined and ringAtomCount %}--ringAtomCount{% endif %}
       {% if aromaticRingCount is defined and aromaticRingCount %}--aromaticRingCount{% endif %}
@@ -74,8 +76,10 @@ jobs:
         - bondCount
         - logp
         - logd
-        - hbd
-        - hba
+        - hbdCount
+        - hbaCount
+        - hbdSites
+        - hbaSites
         - ringCount
         - ringAtomCount
         - aromaticRingCount
@@ -153,6 +157,16 @@ jobs:
                     description: H-bond acceptor count
                     required: false
                     active: true
+                  CXN_donorSites:
+                    type: integer
+                    description: H-bond donor sites
+                    required: false
+                    active: true
+                  CXN_acceptorSites:
+                    type: integer
+                    description: H-bond acceptor sites
+                    required: false
+                    active: true
                   CXN_ringCount:
                     type: integer
                     description: Ring count
@@ -194,7 +208,7 @@ jobs:
           outputFile:
             title: Output file (.sdf or .smi)
             type: string
-            default: cxn-molprops.sdf
+            default: output-cxn-molprops.sdf
             pattern: "^[A-Za-z0-9_/\\.\\-]+$"
           header:
             title: Include header for .smi output
@@ -228,12 +242,20 @@ jobs:
             title: Calculate LogD at ph 7.4
             type: boolean
             default: true
-          hbd:
-            title: Calculate H-bond donors
+          hbdCount:
+            title: Calculate H-bond donor count
             type: boolean
             default: true
-          hba:
-            title: Calculate H-bond acceptors
+          hbaCount:
+            title: Calculate H-bond acceptor count
+            type: boolean
+            default: true
+          hbdSites:
+            title: Calculate H-bond donor sites
+            type: boolean
+            default: true
+          hbaSites:
+            title: Calculate H-bond acceptor sites
             type: boolean
             default: true
           ringCount:
@@ -273,8 +295,10 @@ jobs:
           bondCount: true
           logp: true
           logd: true
-          hba: true
-          hbd: true
+          hbaCount: true
+          hbdCount: true
+          hbaSites: true
+          hbdSites: true
           ringCount: true
           ringAtomCount: true
           aromaticRingCount: true
@@ -378,7 +402,7 @@ jobs:
           outputFile:
             title: Output file (.sdf or .smi)
             type: string
-            default: cxn-logd.sdf
+            default: output-cxn-logd.sdf
             pattern: "^[A-Za-z0-9_/\\.\\-]+$"
           header:
             title: Include header for .smi output
@@ -510,7 +534,7 @@ jobs:
           outputFile:
             title: Output file (.sdf or .smi)
             type: string
-            default: cxn-pka.sdf
+            default: output-cxn-pka.sdf
             pattern: "^[A-Za-z0-9_/\\.\\-]+$"
           header:
             title: Include header for .smi output
@@ -626,7 +650,7 @@ jobs:
           outputFile:
             title: Output file (.sdf or .smi)
             type: string
-            default: gupta-bbb.sdf
+            default: output-gupta-bbb.sdf
             pattern: "^[A-Za-z0-9_/\\.\\-]+$"
           header:
             title: Include header for .smi output
@@ -748,7 +772,7 @@ jobs:
           outputFile:
             title: Output file (.sdf or .smi)
             type: string
-            default: gupta-bbb.sdf
+            default: output-abbvie-mps.sdf
             pattern: "^[A-Za-z0-9_/\\.\\-]+$"
           header:
             title: Include header for .smi output
