fix error in tag name

--- a/data-manager/molprops.yaml
+++ b/data-manager/molprops.yaml
@@ -26,7 +26,7 @@ jobs:
     - tpsa
     image:
       name: informaticsmatters/squonk2-chemaxon
-      tag: license
+      tag: latest
       project-directory: /data
       working-directory: /data
       fix-permissions: true
