--- a/data-manager/molprops.yaml
+++ b/data-manager/molprops.yaml
@@ -97,7 +97,7 @@ jobs:
             - chemical/x-mdl-sdfile
             - squonk/x-smiles
             - text/csv
-            type: file
+            type: molecules-smi
       outputs:
         type: object
         properties:
@@ -369,7 +369,7 @@ jobs:
             - chemical/x-mdl-sdfile
             - squonk/x-smiles
             - text/csv
-            type: file
+            type: molecules-smi
       outputs:
         type: object
         properties:
@@ -503,7 +503,7 @@ jobs:
             - chemical/x-mdl-sdfile
             - squonk/x-smiles
             - text/csv
-            type: file
+            type: molecules-smi
       outputs:
         type: object
         properties:
@@ -644,7 +644,7 @@ jobs:
             - chemical/x-mdl-sdfile
             - squonk/x-smiles
             - text/csv
-            type: file
+            type: molecules-smi
       outputs:
         type: object
         properties:
@@ -767,7 +767,7 @@ jobs:
             - chemical/x-mdl-sdfile
             - squonk/x-smiles
             - text/csv
-            type: file
+            type: molecules-smi
       outputs:
         type: object
         properties:
@@ -890,7 +890,7 @@ jobs:
             - chemical/x-mdl-sdfile
             - squonk/x-smiles
             - text/csv
-            type: file
+            type: molecules-smi
       outputs:
         type: object
         properties:
@@ -1012,7 +1012,7 @@ jobs:
             - chemical/x-mdl-sdfile
             - squonk/x-smiles
             - text/csv
-            type: file
+            type: molecules-smi
       outputs:
         type: object
         properties:
