--- a/data-manager/sygonly.yaml
+++ b/data-manager/sygonly.yaml
@@ -59,6 +59,7 @@ jobs:
             title: Input molecules
             mime-types:
             - text/csv
+            type: file
       outputs:
         type: object
         properties:
